# architecture

./: README.md
lab1/: README.md  readme.md  workspace.dsl
lab1/decisions/: ADR-001-api-gateway.md  ADR-002-postgresql.md  ADR-003-redis-cache-aside.md
lab2/: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-compose.yaml
lab2/configs/: config_vars.yaml  static_config.yaml
lab2/docs/: openapi.yaml
lab2/src/: main.cpp
lab2/src/handlers/auth/: auth_handler.cpp
lab2/src/handlers/budget/: budget_handler.cpp
lab2/src/models/: budget.hpp
lab2/src/storage/budget/: budget_storage.cpp  budget_storage.hpp
lab2/src/storage/user/: user_storage.cpp  user_storage.hpp
lab2/src/utils/: jwt.cpp  jwt.hpp
lab2/tests/: conftest.py
lab3/: CMakeLists.txt  Dockerfile  Makefile  README.md  data.sql  docker-compose.yaml  optimization.md  queries.sql  schema.sql
lab3/configs/: config_vars.yaml  config_vars_docker.yaml  static_config.yaml
lab3/src/: main.cpp
lab3/tests/: conftest.py  test_api.py
lab4/: CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  run_as_user.sh  schema_design.md
lab4/configs/: config_vars.yaml  config_vars_docker.yaml  static_config.yaml
lab4/db/mongo/: data.js  queries.js  validation.js
lab4/db/postgres/: data.sql
lab4/src/: main.cpp
lab4/src/models/: user.hpp
lab4/tests/: conftest.py  test_api.py
lab5/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  performance_design.md  schema_design.md
lab5/configs/: config_vars.yaml  config_vars_docker.yaml  secdist_docker.json  secdist_local.json  static_config.yaml
lab5/db/postgres/: schema.sql
lab5/src/: main.cpp
lab5/src/cache/: cache_service.cpp  cache_service.hpp
lab5/src/models/: budget.hpp
lab5/src/ratelimit/: rate_limiter.cpp  rate_limiter.hpp
lab5/src/utils/: client_ip.cpp  jwt.cpp  (+1 more)
lab5/tests/: conftest.py  test_performance.py
(+22 files in other folders)
